14-tekton/04-demo-ci/07-el-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triggers-ingress-resource
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: eventlistener.forcecs.com
    http:
      paths:
      - backend:
          service:
            name: el-github-event-listener
            port:
              number: 8080
        path: /
        pathType: Exact
